@@ -17,6 +17,7 @@
 # along with OpenQuake. If not, see <http://www.gnu.org/licenses/>.
 
 from __future__ import division
+import h5py
 import numpy
 import unittest
 from numpy.testing import assert_almost_equal as aae
@@ -147,7 +148,7 @@ class ScenarioTestCase(CalculatorTestCase):
         self.assertEqualFiles('LinLee2008SSlab_gmf.xml', f1)
         self.assertEqualFiles('YoungsEtAl1997SSlab_gmf.xml', f2)
 
-        out = self.run_calc(case_9.__file__, 'job.ini', exports='txt,csv')
+        out = self.run_calc(case_9.__file__, 'job.ini', exports='txt,csv,hdf5')
         f1, f2 = out['gmf_data', 'txt']
         self.assertEqualFiles('LinLee2008SSlab_gmf.txt', f1)
         self.assertEqualFiles('YoungsEtAl1997SSlab_gmf.txt', f2)
@@ -155,3 +156,18 @@ class ScenarioTestCase(CalculatorTestCase):
         f1, f2 = out['gmf_data', 'csv']
         self.assertEqualFiles('gmf-LinLee2008SSlab-PGA.csv', f1)
         self.assertEqualFiles('gmf-YoungsEtAl1997SSlab-PGA.csv', f2)
+
+        # test the HDF5 export
+        [fname] = out['gmf_data', 'hdf5']
+        with h5py.File(fname) as f:
+            self.assertEqual(len(f), 2)  # there are only two datasets
+            data1 = f['LinLee2008SSlab()']
+            data2 = f['YoungsEtAl1997SSlab()']
+            self.assertEqual(
+                data1.dtype.names,
+                ('lon', 'lat', 'PGA-000', 'PGA-001', 'PGA-002', 'PGA-003',
+                 'PGA-004', 'PGA-005', 'PGA-006', 'PGA-007', 'PGA-008',
+                 'PGA-009'))
+            self.assertEqual(data1.shape, (3,))
+            self.assertEqual(data1.dtype.names, data2.dtype.names)
+            self.assertEqual(data1.shape, data2.shape)
